--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.10",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-prometheus-middleware": "^1.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "express-prometheus-middleware": "^1.2.0"
+    "express-prometheus-middleware": "^1.2.0",
+    "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
