--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-prometheus-middleware": "^1.2.1",
+    "@types/node": "^17.0.21",
+    "@types/validator": "^13.7.1",
+    "axios": "^0.26.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-prometheus-middleware": "^1.2.0",
+    "prom-client": "^14.0.1",
+    "reflect-metadata": "^0.1.13",
     "sequelize-cli": "^6.4.1",
+    "sequelize-typescript": "^2.1.3",
     "tsconfig-paths": "^3.12.0",
     "tsyringe": "^4.6.0"
   },
