--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "ts-node-dev ./src/shared/infra/http/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,13 +18,17 @@
     "@types/validator": "^13.7.1",
     "axios": "^0.26.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "express-prometheus-middleware": "^1.2.0",
+    "ms": "^2.1.3",
+    "pg": "^8.7.3",
     "prom-client": "^14.0.1",
     "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.17.0",
     "sequelize-cli": "^6.4.1",
     "sequelize-typescript": "^2.1.3",
-    "tsconfig-paths": "^3.12.0",
     "tsyringe": "^4.6.0"
   },
   "devDependencies": {
@@ -38,6 +43,8 @@
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
   }
 }
